Returned to project after long delay. Fixed some flexbox spacing issues, added images

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,15 @@
 body {
     background-color: #1f2937;
+    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.main-body{
     display: flex;
     flex-direction: column;
-    font-family: 'Roboto', sans-serif;
+    flex: 1 1 0
 }
 
 a {
@@ -12,14 +19,14 @@ a {
 
 .header {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    color: #f9faf8
 }
 
 .header-logo {
     width: 60px;
     height: 60px;
-    margin-right: auto;
+    margin-right: auto
 }
 
 .header-links {
@@ -50,18 +57,27 @@ a {
 .box img {
     width: 100px;
     height: 100px;
-    object-fit: cover;
-    border: 4px solid #3882F6;
-    border-radius: 15px;
-    margin: 5px 20px 0px 20px;
   }
   
   .infoboxes {
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-direction: row;
+    text-align: center;
+    justify-content: flex-start;
+    align-items:center;
+  }
+  
+  .box {
+    border: 3px solid grey;
+    border-radius: 12px;
+
   }
 
   .SRI {
+    display: flex;
+    flex-direction: column;
+    background-color: #f9faf8;
+    justify-content: space-between;
     align-items: center;
+    gap: 40px;
   }
